--- a/backend/package.json
+++ b/backend/package.json
@@ -19,11 +19,13 @@
     "mongoose": "^6.5.3",
     "morgan": "^1.10.0",
     "ncp": "^2.0.0",
+    "pdfkit": "^0.13.0",
     "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
+    "@types/pdfkit": "^0.12.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
   }
