--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "@typegoose/typegoose": "^9.11.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
+    "http-errors": "^2.0.0",
     "mongoose": "^6.5.3",
     "morgan": "^1.10.0",
     "ncp": "^2.0.0",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/http-errors": "^1.8.2",
     "@types/morgan": "^1.9.3",
     "@types/pdfkit": "^0.12.6",
     "ts-node-dev": "^2.0.0",
