Modulación de elementos

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,10 @@
 // CONFIG
 PORT=8000
 CORS=*
+HOST=http://localhost:8000
 
 // MONGO
 DB_USER=
 DB_PASSWORD=
-DB_HOST=localhost:49153
+DB_HOST=mongodb://localhost:49153
 DB_NAME=AppCobradores
