--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "morgan": "^1.10.0",
     "ncp": "^2.0.0",
     "pdfkit": "^0.13.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
