--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -34,7 +34,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.0
-  http: any
+  dio: ^4.0.6
+  flutter_pdfview: ^1.2.2
+  http: ^0.13.4
+  path_provider: ^2.0.10
+  path: ^1.8.0
+  permission_handler: ^9.2.0
+  bloc: ^8.1.0
+  flutter_bloc: ^8.1.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
